# temporal-graph-rag

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
config/: config.yaml
scripts/: build_communities.py  ingest.py  query.py
src/agents/: __init__.py  agents.py  context.py  graph_tools.py  guardrails.py  orchestrator.py  schemas.py  tools.py
src/config/: settings.py
src/core/: container.py
src/evaluation/: README.md  cost_latency_eval.py  evaluator.py  indexing_eval.py  retrieval_eval.py  system_eval.py
src/generation/: generator.py
src/graphrag/: __init__.py  community.py  extractor.py  graph_retriever.py  neo4j_store.py  schema.py
src/indexing/: embedder.py  vector_store.py
src/ingestion/: chunker.py  consolidator.py  deduplicator.py  graph_handler.py  parser.py  pipeline.py
src/operations/: ops_middleware.py
src/query/: understanding.py
src/retrieval/: __init__.py  retriever.py
src/utils/: file_utils.py  logger.py
tools/: suggest_chunk_ids.py
